# Equation

./: CMakeLists.txt  README.md  main.cpp
core/: Answer.cpp  Answer.h  EquationDispatch.cpp  EquationDispatch.h
equations/: EquationType1.cpp  EquationType1.h  EquationType2.cpp  EquationType2.h  EquationType3.cpp  EquationType3.h  EquationType4.cpp  EquationType4.h  EquationType5.cpp  EquationType5.h  EquationType6.cpp  EquationType6.h  EquationType7.cpp  EquationType7.h  EquationType8.cpp  EquationType8.h
